# XenofilteR

./: DESCRIPTION  NAMESPACE  NEWS  README.md  XenofilteR.R
R/: XenofilteR.R  private.R
data/: Test_data_mm10.bam.bai  Test_hg19_NRAS.bam  Test_hg19_NRAS.bam.bai
inst/extdata/: Test_mm10_NRAS.bam
man/: XenoFilteR.Rd
original/: xenofilt.sh  xenofilt_PE.pl  xenofilt_SE.pl  xf_slices.pl
vignettes/: XenoFilteR.Rnw  XenoFilteR.tex  XenofilteR.Rnw  XenofilteR.tex
xenofilters/: Cargo.toml  bwa_mem.sh
xenofilters/src/: aln_stream.rs  bam_format.rs  fragment.rs  fragment_state.rs  main.rs  vcf_format.rs  xenofilter.rs
xenofilters/src/alignment/: cigar_operation.rs  errors.rs  iterator.rs  mdopiterator.rs  mod.rs  ops.rs  prepared.rs  stitched_alignment.rs
xenofilters/src/filter_algorithm/: line_by_line.rs  mod.rs
xenofilters/src/variant/: mod.rs  population_variant.rs  sample_variant.rs
